config/stalwart-mail/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stalwart-mail
  labels:
    app.kubernetes.io/name: stalwart-mail
