config/stalwart-mail/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stalwart
  namespace: stalwart-mail
  labels:
    app: stalwart
spec:
  ingressClassName: nginx
  rules:
    - host: mail.newjoy.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stalwart
                port:
                  number: 80
